--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,60 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-self: center;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  border: 2px solid #fff;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.lowerBox {
+  display: flex;
+  justify-content: center;
+}
+
+.Row {
+  display: grid;
+  grid-template-rows: 5fr 1fr;
+
+}
+
+.logolayout {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+}
+
+.logo {
+  align-self: center;
+  padding-top: 20px;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: right;
+
+}
+
+.word {
+  width: 280px;
+  height: 220px;
+}
+
+.pad {
+  padding-right: 2px;
+}
+
+.buttons {
+  padding-top: 2px;
+  padding-left: 2px;
 }
